--- a/ingress.yaml
+++ b/ingress.yaml
@@ -5,7 +5,7 @@ metadata:
   namespace: default
 spec:
   rules:
-  - host: test.sakthisaran.in
+  - host: *.sakthisaran.in
     http:
       paths:
       - path: /
